--- a/src/app/modules/developer/Components/reviews-list/reviews-list.component.html
+++ b/src/app/modules/developer/Components/reviews-list/reviews-list.component.html
@@ -1,4 +1,14 @@
-<h2 class="mt-5 ms-3">Reviews From Mentors</h2>
+<br>
+<br>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&display=swap" rel="stylesheet">
+
+<h5 class="display-4 fw-bold text-center" style="
+font-family: 'Edu AU VIC WA NT Hand', cursive;
+font-optical-sizing: auto;
+font-style: normal;">Reviews From Mentors</h5>
+<br>
 <div class="container">
   <!-- <div class="row"> -->
     <!-- <div class="col-4">
@@ -27,5 +37,5 @@
         </div>
       </div>
     </div>
-  
+
 
