--- a/src/app/modules/mentor/components/mentorlayout/mentorlayout.component.html
+++ b/src/app/modules/mentor/components/mentorlayout/mentorlayout.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid px-0">
-  <div class="row no-gutters">
+  <div class="row no-gutters gap-0">
 
     <!-- Sidebar (visible on larger screens and tablets) -->
-    <div class="col-lg-3 col-md-4 d-none d-md-block">
+    <div class="col-lg-3  col-xl-2  col-md-4 d-none d-md-block">
       <app-sidebarlayout></app-sidebarlayout> <!-- Sidebar remains for larger screens and tablets -->
     </div>
 
@@ -40,7 +40,7 @@
     </nav>
 
     <!-- Main Content -->
-    <div class="col-lg-9 col-md-8 col-12">
+    <div class="col-lg-9 col-md-8 col-12 ps-5">
       <router-outlet></router-outlet>
     </div>
   </div>
