--- a/src/app/modules/developer/Components/query/query.component.html
+++ b/src/app/modules/developer/Components/query/query.component.html
@@ -105,10 +105,7 @@
                 <a href="#" class="btn btn-light mr-2"><i class="fa-brands fa-linkedin-in"></i></a>
                 <a href="#" class="btn btn-light"><i class="fa-solid fa-share"></i></a>
               </div>
-            </div>
-          </div>
-
-        </div>
+         
 
 
         <div class="col-xl-4 col-12 justify-content-center">
@@ -150,8 +147,8 @@
                          -->
                   <!-- <div *ngIf="selectedFile">
                           <p>Selected file: {{ selectedFile }}</p>
-                        </div> -->
-                  <<<<<<< HEAD </div>
+                  <<<<<<< HEAD      </div> -->
+                   </div>
                 </div>
 
                 <button class="btn btn-primary btn-block mt- p-2" routerLink='/answer_query'>Send</button>
@@ -170,4 +167,3 @@
   </div>
 
 
-</div>
