--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,10 +1,11 @@
-<footer class="bg-dark p-3 mt-5">
+<footer class="p-3 mt-5">
     <div class="container">
         <div class="row align-items-center">
             <!-- Widget -->
             <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
                 <!-- Logo START -->
-                <a href="#"> <img class="h-20px" src="" alt="logo"> </a>
+                <a href="#"> <img src="logo 3_processed (1).jpg" class="footer-image"> </a>
+                <br>
                 <p class="text-white">If you want a guide on your journey as a developer, you are in the right place</p>
             </div>
 
