--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
-    <a class="navbar-brand">Dev-Guide</a>
+    <!-- <a class="navbar-brand">Dev-Guide</a> -->
+     <img src="logo 3_processed.jpg" class="nav-image">
     <div class="d-flex order-lg-2 ms-auto align-items-center">
       <button class="navbar-toggler me-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -42,6 +43,9 @@
 
     <div class="collapse navbar-collapse order-lg-1" id="navbarSupportedContent">
       <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="/developer/home">Home</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" routerLink="/developer/userlayout">Developer</a>
         </li>
