--- a/src/app/modules/developer/Components/query/query.component.html
+++ b/src/app/modules/developer/Components/query/query.component.html
@@ -67,7 +67,54 @@
           </label>
         </div>
 
-        <button class="btn btn-primary btn-block mt-2 ps-5 pe-5 mt-2" routerLink='/answer_query'>Send</button>
+        <button class="btn btn-primary btn-block mt-2 ps-5 pe-5 mt-2" (click)="showConfirmationModal()">Send</button>
+
+        <!-- Button to trigger the success modal -->
+        <!-- <button (click)="showModal()">Complete Action</button> -->
+
+        <!-- Modal structure, shown conditionally based on isModalVisible -->
+         @if(isModalVisible){
+          <div class="modal-backdrop">
+            <div class="modal-container">
+              <div class="modal-header">
+                <!-- Success icon with green color -->
+                <span class="modal-icon checkmark">✔️</span>
+              </div>
+              <div class="modal-message">
+                <!-- Success message -->
+                <p>{{ modalMessage }}</p>
+              </div>
+              <div class="modal-actions">
+                <!-- Button to go to Home -->
+                <button (click)="goToHome()" class="btn btn-success">Go to Home</button>
+
+              </div>
+            </div>
+          </div>
+         }
+
+         @if(isConfirmationVisible){
+          <div class="modal-backdrop">
+            <div class="modal-container">
+              <div class="modal-header">
+                <!-- Optional icon or header text -->
+                <h4>Confirm Action</h4>
+              </div>
+              <div class="modal-message">
+                <p>Are you sure you want to send this file?</p>
+              </div>
+              <div class="modal-actions">
+                <!-- Confirm and Cancel buttons -->
+                <button class="btn btn-success" (click)="confirmSend()">Confirm</button>
+                <button class="btn btn-danger" (click)="cancelSend()">Cancel</button>
+              </div>
+            </div>
+          </div>
+         }
+
+
+
+
       </div>
     </div>
   </div>
