--- a/src/app/shared/components/register/register.component.css
+++ b/src/app/shared/components/register/register.component.css
@@ -1,12 +1,109 @@
 .signup-form {
-  max-width: 400px;
+  max-width: 470px;
   margin: 50px auto;
   padding: 15px;
-  background-color: #cdcbb1;
+  /* background-color: #cdcbb1; */
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(60, 6, 6, 0.1);
+  
+  /* border:3px solid black; */
 }
 
 .signup-form h2 {
   margin-bottom: 20px;
 }
+
+
+/* body{
+  margin:0 auto;
+  width:90%;
+  padding:0;
+  font-family: 'Didact Gothic', sans-serif;
+}
+.wrap{
+  margin-top:30px;
+  width:480px;
+} */
+/* fieldset{
+  width: 400px;
+  border-radius:10px;
+  border-right:1px solid transparent;
+  border-left:1px solid transparent;
+}
+legend{
+  background:#3A3D52;
+  width:100px;
+  height:100px;
+  margin-left:168px;
+  border-radius:50px;
+} */
+/* h3{
+  position:relative;
+  padding-top:35px;
+  text-align:center;
+  color:#FF6D2E;
+} */
+h2{
+  text-align: center;
+  font-size: 0.9em;
+  color:black;
+  padding-top: 5px;
+}
+/* input{
+  width:170px;
+  height: 50px;
+  margin-left:30px;
+  margin-top: 15px;
+  text-align: center;
+  border-radius: 10px;
+  border: 1px solid lightgrey;
+  color: #7D7769;
+  font-weight: bold;
+} */
+/* input:focus{
+  border:1px solid rgba(255,109,46,0.6);
+  box-shadow: 0 0 3px rgba(255,109,46,0.6);
+  outline: none;
+  font-size: 1.1em;
+} */
+button{
+  background: #fff;
+  border: 1px solid transparent;
+  border-radius:10px ;
+  width: 120px;
+  height: 50px;
+  margin-left: 20px;
+  margin-top:15px;
+  color: #7D7769;
+  border:1px solid #415bcf;
+}
+button:hover{
+  background:#cfccc4 ;
+  border-radius: 10px;
+}
+button:focus{
+  border:2px solid black;
+  box-shadow: 0 0 3px  rgba(105, 94, 90, 0.6);
+  outline: none;
+  font-size: 1.1em;
+}
+/* .fa-facebook{
+  color:#4F79A7;
+}
+.fa-google-plus{
+  color:#D64E3C;
+}
+.fa-twitter{
+  color:#4ECDED;
+}
+.fa-facebook, .fa-google-plus, .fa-twitter{
+  padding: 8px;
+}
+input[type=submit]{
+  background: #FF9D73;
+  color: #3A3D52;
+  margin:20px 140px 30px;
+} */
+/* input[type=submit]:hover{
+  background:#000000;
+} */
