--- a/src/app/shared/components/register/register.component.html
+++ b/src/app/shared/components/register/register.component.html
@@ -1,56 +1,75 @@
 <div class="container">
   <div class="signup-form">
     <h2 class="text-center">Sign up</h2>
-    <form [formGroup]="form">
+    <form [formGroup]="form" (ngSubmit)="send()">
       <div class="form-group">
         <label for="email">Email address</label>
-        <input formControlName="email" type="email" class="form-control" [ngClass]="{
-            'is-valid': form.controls['email'].valid,
-            'is-invalid': form.controls['email'].invalid && form.controls['email'].dirty
+        <input formControlName="Email" type="email" class="form-control" [ngClass]="{
+            'is-valid': form.controls['Email'].valid,
+            'is-invalid': form.controls['Email'].invalid && form.controls['Email'].dirty
             }">
         <div class="valid-feedback">
           Looks good!
         </div>
         <div class="invalid-feedback">
           <!-- Please Email Like : Admin&commat;gmail.com . -->
-          @if(form.controls['email'].hasError("required")){
+          @if(form.controls['Email'].hasError("required")){
           <span>Please Provide Valid Email</span>
           }
-          @else if(form.controls['email'].hasError("email")) {
+          @else if(form.controls['Email'].hasError("Email")) {
           <span>Email must have letter &commat;</span>
           }
         </div>
       </div>
       <div class="form-group">
-        <label for="personname">Full Name</label>
-        <input formControlName="personname" type="text" class="form-control" [ngClass]="{
-            'is-valid': form.controls['personname'].valid,
-            'is-invalid': form.controls['personname'].invalid && form.controls['personname'].dirty
+        <label for="FirstName">First Name</label>
+        <input formControlName="FirstName" type="text" class="form-control" [ngClass]="{
+            'is-valid': form.controls['FirstName'].valid,
+            'is-invalid': form.controls['FirstName'].invalid && form.controls['FirstName'].dirty
           }">
         <div class="valid-feedback">
           Looks good!
         </div>
         <div class="invalid-feedback">
           <!-- Please Email Like : Admin&commat;gmail.com . -->
-          @if(form.controls['personname'].hasError("required")){
+          @if(form.controls['FirstName'].hasError("required")){
           <span>Please Provide Valid Name</span>
           }
-          @else if(form.controls['personname'].hasError("minLength")){
+          @else if(form.controls['FirstName'].hasError("minLength")){
           <span> Name must have 20 Letter atleast.</span>
           }
         </div>
       </div>
       <div class="form-group">
-        <label for="username">UserName</label>
-        <input formControlName="username" type="text" class="form-control" [ngClass]="{
-            'is-valid': form.controls['username'].valid,
-            'is-invalid': form.controls['username'].invalid && form.controls['username'].dirty
+        <label for="LastName">Last Name</label>
+        <input formControlName="LastName" type="text" class="form-control" [ngClass]="{
+            'is-valid': form.controls['LastName'].valid,
+            'is-invalid': form.controls['LastName'].invalid && form.controls['LastName'].dirty
           }">
         <div class="valid-feedback">
           Looks good!
         </div>
         <div class="invalid-feedback">
-          @if(form.controls['username'].hasError("required")){
+          <!-- Please Email Like : Admin&commat;gmail.com . -->
+          @if(form.controls['LastName'].hasError("required")){
+          <span>Please Provide Valid Name</span>
+          }
+          @else if(form.controls['LastName'].hasError("minLength")){
+          <span> Name must have 20 Letter atleast.</span>
+          }
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="UserName">UserName</label>
+        <input formControlName="UserName" type="text" class="form-control" [ngClass]="{
+            'is-valid': form.controls['UserName'].valid,
+            'is-invalid': form.controls['UserName'].invalid && form.controls['UserName'].dirty
+          }">
+        <div class="valid-feedback">
+          Looks good!
+        </div>
+        <div class="invalid-feedback">
+          @if(form.controls['UserName'].hasError("required")){
           <span>Please Provide Valid UserName</span>
           }
           @else{
@@ -59,7 +78,7 @@
 
         </div>
       </div>
-      <div class="form-group">
+      <!-- <div class="form-group">
         <label for="phonenumber">Phone Number</label>
         <input formControlName="phonenumber" type="text" class="form-control" [ngClass]="{
             'is-valid': form.controls['phonenumber'].valid,
@@ -71,12 +90,12 @@
         <div class="invalid-feedback">
           <span>Please Provide Valid Phone Number contains 11 number</span>
         </div>
-      </div>
+      </div> -->
       <div class="form-group">
         <label for="exampleInputPassword1" class="form-label">Password</label>
-        <input formControlName="password" type="password" class="form-control" [ngClass]="{
-            'is-valid': form.controls['password'].valid,
-            'is-invalid': form.controls['password'].invalid && form.controls['password'].dirty
+        <input formControlName="Password" type="Password" class="form-control" [ngClass]="{
+            'is-valid': form.controls['Password'].valid,
+            'is-invalid': form.controls['Password'].invalid && form.controls['Password'].dirty
             }">
         <div class="valid-feedback">
           Looks good!
@@ -85,7 +104,27 @@
           Please Password contains 8 letters atlest and has Lower case and upper case and number and spical caracter.
         </div>
       </div>
-      <button type="submit" [disabled]="form.invalid" class="btn btn-primary btn-block">Signup</button>
+      <div class="form-group">
+        <label for="exampleInputPassword1" class="form-label">Confirm Password</label>
+        <input formControlName="ConfirmPassword" type="password" class="form-control" [ngClass]="{
+            'is-valid': form.controls['ConfirmPassword'].valid,
+            'is-invalid': form.controls['ConfirmPassword'].invalid && form.controls['ConfirmPassword'].dirty
+            }">
+        <div class="valid-feedback">
+          Looks good!
+        </div>
+        <div class="invalid-feedback">
+          Please Password contains 8 letters atlest and has Lower case and upper case and number and spical caracter.
+        </div>
+      </div>
+
+      <form class="form-group" >
+        <h2 class=" m-0 p-0">Your Role</h2>
+        <button type="button" (click)="setRole('Developer')">Developer</button>
+        <button type="button" (click)="setRole('HR')"> HR</button>
+        <button type="button" (click)="setRole('Monitor')">Monitor</button>
+     </form>
+      <button type="submit" [disabled]="form.invalid" class="btn btn-primary btn-block text-center justify-content-center">Sign Up</button>
       <p class="text-center mt-3">
         Already have an account?
         <a routerLink="/developer/login">login</a>
