--- a/src/app/modules/developer/Components/step-four/step-four.component.html
+++ b/src/app/modules/developer/Components/step-four/step-four.component.html
@@ -9,24 +9,23 @@
               <label for="experience">Years of full-time work experience</label>
               <input type="number" id="experience" class="form-control" formControlName="experience">
             </div>
-            <div class="form-group">
+            <!-- <div class="form-group">
               <label for="role">Preferred role</label>
               <select id="role" class="form-control" formControlName="role">
                 <option value="">Select your preferred role</option>
                 <option value="Developer">Developer</option>
                 <option value="Designer">Designer</option>
-                <!-- Add more roles as needed -->
               </select>
               @if (stepFourForm.get('role')?.invalid && stepFourForm.get('role')?.touched) {
                 <div class="text-danger">
                   Preferred role is required
                 </div>
               }
-            </div>
+            </div> -->
             <div class="form-group">
               <label for="skills">Skills</label>
               <ng-select [items]="skills" bindLabel="name" bindValue="id" formControlName="skills" multiple
-                class="custom-ng-select">
+                class="custom-ng-select form-control " style="background-color: white;">
               </ng-select>
               @if (stepFourForm.get('skills')?.invalid && stepFourForm.get('skills')?.touched) {
                 <div
@@ -35,7 +34,7 @@
                 </div>
               }
             </div>
-            <button type="button" class="btn btn-secondary mt-3" (click)="goToPreviousStep()">Back</button>
+            <button type="button" class="btn btn-secondary mt-3" (click)="goToPreviousStep()" [disabled]="stepFourForm.invalid">Back</button>
             <button type="submit" class="btn btn-primary mt-3 ms-3">Next</button>
           </form>
         </div>
